--- a/playground/Dockerfile
+++ b/playground/Dockerfile
@@ -1,4 +1,11 @@
 FROM node:16
+
 WORKDIR /usr/src/app
-COPY ./index.js ./index.js
-CMD node index.js
+
+COPY --chown=node:node . .
+RUN npm ci --only=production
+
+ENV DEBUG=playground:*
+
+USER node
+CMD npm start
