--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
@@ -16,6 +17,7 @@
     "redis": "^3.1.2"
   },
   "devDependencies": {
+    "jest": "^29.5.0",
     "nodemon": "^2.0.12"
   }
 }
