--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:16 AS build-stage
-ENV REACT_APP_BACKEND_URL = http://localhost:3001/
+ENV REACT_APP_BACKEND_URL http://localhost:3001/
 WORKDIR /usr/src/app
 
 COPY . .
