done with exercise 12.14

--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,9 +1,14 @@
-FROM node:16 AS build-stage
-ENV REACT_APP_BACKEND_URL http://localhost:3001/
+FROM node:18-alpine AS base
 WORKDIR /usr/src/app
-
 COPY . .
+RUN npm ci
+ENV REACT_APP_BACKEND_URL http://localhost:3001/
 
-RUN npm i
+FROM base as test
+RUN CI=true npm test
 
-CMD ["npm", "start"]
+FROM test as build
+RUN npm run build
+
+FROM nginx:1.21.1-alpine
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
