--- a/hello-front/docker-compose.yml
+++ b/hello-front/docker-compose.yml
@@ -2,7 +2,12 @@ version: "3.8"
 
 services:
   app:
-    image: hello-front
-    build: .
+    image: hello-front-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
     ports:
-      - "8000:80"
+      - 3000:3000
+    container_name: hello-front-dev
