still working on the docker compose, dev dockerfile is done

--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -21,5 +21,10 @@ services:
     volumes:
       - ./redis_data:/data
 
+  server:
+    environment:
+      - REDIS_PASSWORD=redisurl_here
+      - MONGO_URL=mongourl_here
+
 volumes:
   mongo_data:
