--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -7,12 +7,12 @@ services:
       context: .
       dockerfile: dev.Dockerfile
     volumes:
-      - ./:usr/src/app
+      - ./:/usr/src/app
     ports:
       - 3001:3000
     environment:
-      - REDIS_URL=redis
-      - MONGO_URL=mongo
+      - REDIS_URL=redisurlhere
+      - MONGO_URL=mongourlhere
 
   mongo:
     image: mongo
@@ -24,7 +24,7 @@ services:
       MONGO_INITDB_DATABASE: the_database
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-      - mongo_data:/data/db
+      - ./mongo_data:/data/db
 
   redis:
     image: redis
