--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - ./:/usr/src/app
     ports:
-      - 3001:3000
+      - 3001:3001
     environment:
       - REDIS_URL=redis://redis:6379
-      - MONGO_URL=mongodb://root:example@mongo:27017/the_database
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
 
   mongo:
     image: mongo
