done with exercise 12.18

--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -13,7 +13,12 @@ http {
       proxy_set_header Connection 'upgrade';
       
       # Requests are directed to http://localhost:3000
-      proxy_pass http://app:3000;
+      proxy_pass http://frontend:3000;
+    }
+
+    # Requests starting with /api/ are handled
+    location /api/ {
+      proxy_pass http://backend:3001/;
     }
   }
 }
