--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -18,6 +18,8 @@ services:
       dockerfile: ./dev.Dockerfile
     volumes:
       - ./todo-frontend:/usr/src/app
+    ports:
+      - 3000:3000
 
   backend:
     image: todo-backend-dev
@@ -26,6 +28,8 @@ services:
       dockerfile: ./dev.Dockerfile
     volumes:
       - ./todo-backend:/usr/src/app
+    ports:
+      - 3001:3001
     environment:
       - REDIS_URL=redis://redis:6379
       - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
